--- a/web/index.html
+++ b/web/index.html
@@ -21,13 +21,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="ICANSPELL">
+  <meta name="apple-mobile-web-app-title" content="Spellicious">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
-  <title>ICANSPELL</title>
+  <title>Spellicious</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -53,6 +53,8 @@
       });
     });
   </script>
+
+
 
 
 
